Question 1 plotted completely TODO perforn n times and take average

--- a/Coding_Asg_02/Assignment_2.ipynb
+++ b/Coding_Asg_02/Assignment_2.ipynb
@@ -15,8 +15,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -33,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,43 +49,37 @@
     "    for j in range(1, k/2 + 1):\n",
     "        adj[i, (i+j) % nodes] = 1\n",
     "        adj[(i+j) % nodes, i] = 1  \n",
-    "    \n",
-    "    \n",
+    "\n",
+    "edgelist = np.zeros([nodes*k/2, 2])\n",
+    "iterator = 0\n",
+    "\n",
+    "for i in range(0, nodes-1):\n",
+    "    for j in range(i+1, nodes):\n",
+    "        if adj[i, j] == 1:\n",
+    "            edgelist[iterator, 0] = i\n",
+    "            edgelist[iterator, 1] = j\n",
+    "            iterator += 1\n",
+    "\n",
+    "G = nx.Graph()\n",
+    "G.add_edges_from(edgelist)\n",
     "# print adj\n",
     "# print sum(adj)\n",
     "# G = nx.random_regular_graph(k, nodes)\n",
-    "# G_copy = G"
+    "G_copy = G\n",
+    "\n",
+    "# plt.clf()\n",
+    "# pos=nx.spring_layout(G) # positions for all nodes\n",
+    "# nx.draw(G, pos)\n",
+    "# #nx.draw_networkx_labels(G, pos)\n",
+    "# plt.title('Initial Regular Graph')\n",
+    "# plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.0\n",
-      "1.0\n",
-      "1.00002006446\n",
-      "1.00066137566\n",
-      "1.00001580836\n",
-      "1.02368927369\n",
-      "1.00003222474\n",
-      "1.03252765753\n",
-      "0.999930686405\n",
-      "1.00252525253\n",
-      "0.999728825761\n",
-      "0.990543186972\n",
-      "0.999394418067\n",
-      "0.973705527277\n",
-      "0.999077852941\n",
-      "0.979269978128\n",
-      "0.997412189203\n",
-      "1.02129699318\n"
-     ]
-    },
     {
      "ename": "NetworkXError",
      "evalue": "Graph is not connected.",
@@ -91,7 +87,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNetworkXError\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-177-36ea64048a9a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     31\u001b[0m                 \u001b[0mG\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_edge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnew_node\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m     \u001b[0;32mprint\u001b[0m \u001b[0mnx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maverage_shortest_path_length\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mG\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mL\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m     \u001b[0;32mprint\u001b[0m \u001b[0mnx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maverage_clustering\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mG\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mC\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-44-d484ae38252f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     36\u001b[0m                 \u001b[0mG\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_edge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnew_node\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m     \u001b[0mL\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0miterator\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maverage_shortest_path_length\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mG\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     39\u001b[0m     \u001b[0mC\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0miterator\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maverage_clustering\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mG\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m     \u001b[0miterator\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/usr/local/lib/python2.7/dist-packages/networkx/algorithms/shortest_paths/generic.pyc\u001b[0m in \u001b[0;36maverage_shortest_path_length\u001b[0;34m(G, weight)\u001b[0m\n\u001b[1;32m    297\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    298\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mnx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_connected\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mG\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 299\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mnx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mNetworkXError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Graph is not connected.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    300\u001b[0m     \u001b[0mavg\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    301\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mweight\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mNetworkXError\u001b[0m: Graph is not connected."
      ]
@@ -114,9 +110,14 @@
     "L = np.zeros_like(prob)\n",
     "C = np.zeros_like(prob)\n",
     "\n",
+    "G = G_copy\n",
+    "\n",
     "L[0] = nx.average_shortest_path_length(G)\n",
     "C[0] = nx.average_clustering(G)\n",
     "\n",
+    "\n",
+    "\n",
+    "iterator = 1\n",
     "for p in prob:\n",
     "    G = G_copy\n",
     "    for n in G.nodes():\n",
@@ -129,13 +130,16 @@
     "                    new_node = np.random.randint(1, high=nodes+1)\n",
     "                G.remove_edge(e[0], e[1])\n",
     "                G.add_edge(e[0], new_node)\n",
-    "                \n",
-    "    print nx.average_shortest_path_length(G)/L[0]\n",
-    "    print nx.average_clustering(G)/C[0]\n",
+    "    \n",
+    "    L[iterator] = nx.average_shortest_path_length(G)\n",
+    "    C[iterator] = nx.average_clustering(G)\n",
+    "    iterator += 1\n",
     "    \n",
     "\n",
+    "## TODO: Capture graph disconnected condition on rewiring\n",
     "\n",
-    "    \n"
+    "L /= L[0]\n",
+    "C /= C[0]"
    ]
   },
   {
@@ -164,36 +168,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n",
-      "100\n",
-      "0\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "index 100 is out of bounds for axis 1 with size 100",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-202-87b1144b2ee9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mnodes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0madj\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mnodes\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m: index 100 is out of bounds for axis 1 with size 100"
-     ]
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXcAAAD8CAYAAACMwORRAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAElpJREFUeJzt3X9sndddx/H3NyllZBsdLGYaTWNHIgOiiaqb3RWKUC8t\nUjpQggSy2nkwULdoER2DTau6BheaqBX1EL+kEi2MsQlMiykTRKPQLc2dkNBW2V3XrWkphLZJ03Uk\nGyMgIuiqfvnjuV4cN4mv4+f+On6/pOj6OffM53u16uNzz33uOZGZSJLKsqbXBUiS6me4S1KBDHdJ\nKpDhLkkFMtwlqUCGuyQVyHCXpAIZ7pJUIMNdkgp0Ua8GXr9+fY6MjPRqeEkaSI888sjXM3NoqX49\nC/eRkRHm5uZ6NbwkDaSIONJOP5dlJKlAhrskFchwl6QCGe6SVCDDXZIKtGS4R8THI+J4RDx+jucj\nIv4wIg5HxJcj4i31lwlMTXFgV5OREVizBkZG4MCuJkxNdWS4ro8nSTVqZ+b+CWDreZ6/Htjc+rcD\n2Lvysl7pwMkxLr9rnE1HmmTCpiNNLr9rnAMnxzoxXNfHY2oKms0z25od+mPSzbEk9UZmLvkPGAEe\nP8dzHwVuXHD9FPDGpX7nW9/61lyO4eHMaziYx1mfdzCZx1mf13Awh4eX9Wv6drw8eDBz/frq8WzX\ngzpWZubdd7/ydx88WLVLWhZgLtvJ7bY6nT/cPw38+ILrh4DRc/TdAcwBcxs3blzWC4qoqr2DyUzI\nO5hMqNo7odvjZebpkJ2c7GzY9mqsbv0xkQrWl+G+8J8z93OYrP6Y5ORkhwfq8ljd/GMiFayb4d6V\nZZnP3nbw2wELp4P3s7d1JiS6PV5mljtzn9fNPyZSodoN9zpuhdwP/GLrrpmrgJOZ+UINv/cM110y\ny2O3zfDMcIMIeGa4wWO3zXDdJbN1D9WT8Wg2YXwcZmZg9+7qcXz8lR98DtpYC8fcuxcmJ6vHTo7l\nB8bS0jN34F7gBeBbwDHgJuC9wHtbzwdwD/BvwFdoY0kmL2DmXrxufujY7Q84u73m7hq/CkabM/eo\n+nbf6OhouivkKjE1BWNj0Gicbms2YXYWbrmlM2POvzvZubN6pzAzc+b40oCKiEcyc3TJfoa7inX7\n7bBnT7UUtHt3r6uRatFuuLv9gMrUzTV+qQ8Z7ipPLz4wlvqM4a7yzM6eucbeaFTXsx2408k7c9Sn\nDHeV55ZbXvnhaaPRmQ9vx8bOfFcw/65hrEN7EElt6tkZqlIR5t8VeGeO+owzd2mlGo0q2PfsqR4N\ndvUBw11aKe/MUR8y3KWV8M4c9SnDXVqJbt6ZIy2D31CVpAHiN1QlaRUz3CWpQIa7JBXIcJekAhnu\nklQgw12SCmS4S1KBDHdJKpDhLg0S949Xmwx3aZC4f7za5H7u0iBx/3i1yZm7NGjcP15tMNylQeP+\n8WqD4S4NEvePV5sMd2mQuH+82uR+7pI0QNzPXZJWMcNdkgpkuEtSgdoK94jYGhFPRcThiLj1LM9v\njIhmRDwaEV+OiLfXX6okqV1LhntErAXuAa4HtgA3RsSWRd1+A5jJzCuAG4A/qrtQSVL72pm5Xwkc\nzsynM/NF4D5g+6I+CXx36+dLgK/WV6Ikabna2VvmUuC5BdfHgLct6vNbwGci4n3Aq4HraqlOknRB\n6vpA9UbgE5m5AXg78GcR8YrfHRE7ImIuIuZOnDhR09CSpMXaCffngcsWXG9otS10EzADkJmfB14F\nrF/8izJzX2aOZubo0NDQhVUsSVpSO+E+C2yOiE0RcTHVB6b7F/U5ClwLEBE/TBXuTs0lqUeWDPfM\nfAm4GXgQeJLqrphDEbE7Ira1un0QeE9EPAbcC/xS9mpfA0lSe4d1ZOYDwAOL2m5f8PMTwNX1liZJ\nulB+Q1WSCmS4S1KBDHdJKpDhLkkFMtwlqUCGuyQVyHCXpAIZ7pJUIMNdkgpkuEtSgQx3SSqQ4S7p\n3KamoNk8s63ZrNrV1wx3Sec2Ngbj46cDvtmsrsfGeluXltTWrpCSVqlGA2ZmqkDfuRP27q2uG41e\nV6YlOHOXdH6NRhXse/ZUjwb7QDDcJZ1fs1nN2Ccnq8fFa/DqS4a7pHObX2OfmYHdu08v0Rjwfc9w\nl3Rus7NnrrHPr8HPzva2Li0penXU6ejoaM7NzfVkbEkaVBHxSGaOLtXPmbskFchwl6QCGe6SVCDD\nXZIKZLhLUoEMd0kqkOEuSQUy3CWpQIa7JBXIcJekAhnuklQgw12SCtRWuEfE1oh4KiIOR8St5+gz\nHhFPRMShiPiLesuUJC3HksfsRcRa4B7gp4BjwGxE7M/MJxb02Qx8GLg6M78ZEd/XqYIlSUtrZ+Z+\nJXA4M5/OzBeB+4Dti/q8B7gnM78JkJnH6y1TkrQc7YT7pcBzC66PtdoWehPwpoj4p4j4QkRsPdsv\niogdETEXEXMnTpy4sIolSUuq6wPVi4DNwDXAjcAfR8TrFnfKzH2ZOZqZo0NDQzUNLUlarJ1wfx64\nbMH1hlbbQseA/Zn5rcx8BvgXqrCXJPVAO+E+C2yOiE0RcTFwA7B/UZ+/oZq1ExHrqZZpnq6xTknS\nMiwZ7pn5EnAz8CDwJDCTmYciYndEbGt1exD4RkQ8ATSBD2XmNzpVtCTp/DwgW5IGiAdkS9IqZrhL\nUoEMd0kqkOEuSQUy3CWpQIZ7H5mehpERWLOmepye7nVFkgbVkrtCqjump2HHDjh1qro+cqS6BpiY\n6F1dkgaTM/c+sWvX6WCfd+pU1S5Jy2W494mjR5fXLknnY7j3iY0bl9cuSedjuPeJO++EdevObFu3\nrmqXpOUy3PvExATs2wfDwxBRPe7b54epki6Md8v0kYkJw1xSPZy5S1KBDHdJKpDhLkkFMtwlqUCG\nuyQVyHCXpAIZ7pJUIMNdkgpkuEtSgQx3SSqQ4S5JBTLcJalAhrskFchwl9Qfpqag2Tyzrdms2rVs\nhruk/jA2BuPjpwO+2ayux8Z6W9eAcj93Sf2h0YCZmSrQd+6EvXur60aj15UNJGfukvpHo1EF+549\n1aPBfsHaCveI2BoRT0XE4Yi49Tz9fi4iMiJG6ytR0qrRbFYz9snJ6nHxGrzatmS4R8Ra4B7gemAL\ncGNEbDlLv9cC7wcerrtISavA/Br7zAzs3n16icaAvyDtzNyvBA5n5tOZ+SJwH7D9LP32AHcD/1tj\nfZJWi9nZM9fY59fgZ2d7W9eAaucD1UuB5xZcHwPetrBDRLwFuCwz/y4iPlRjfZJWi1tueWVbo+G6\n+wVa8QeqEbEG+F3gg2303RERcxExd+LEiZUOLUk6h3bC/XngsgXXG1pt814LvBn4XEQ8C1wF7D/b\nh6qZuS8zRzNzdGho6MKrliSdVzvhPgtsjohNEXExcAOwf/7JzDyZmeszcyQzR4AvANsyc64jFUuS\nlrRkuGfmS8DNwIPAk8BMZh6KiN0Rsa3TBUqSlq+tb6hm5gPAA4vabj9H32tWXpYkaSX8huoqNT0N\nIyOwZk31OD3d64ok1cm9ZVah6WnYsQNOnaqujxyprgEmJnpXl6T6OHNfhXbtOh3s806dqtollcFw\nX4WOHl1eu6TBY7ivQhs3Lq9d0uAx3FehO++EdevObFu3rmqXVAbDfRWamIB9+2B4GCKqx337/DBV\nKol3y6xSExOGuVQyZ+6SVCDDXZIKZLhLUoEMd0kqkOEuSQUy3CWpQIa7JBXIcJekAhnuklQgw12S\nCmS4S1KBDHd1hcf6Sd3lxmHqOI/1k7rPmbs6zmP9pO4z3NVxHusndZ/hro7zWD+p+wx3dZzH+knd\nZ7ir4zzWT+o+75ZRV3isn9RdztwlqUCGuyQVyHCXpAIZ7pJUoLbCPSK2RsRTEXE4Im49y/MfiIgn\nIuLLEfFQRAzXX6okqV1LhntErAXuAa4HtgA3RsSWRd0eBUYz80eA+4GpuguVJLWvnZn7lcDhzHw6\nM18E7gO2L+yQmc3MnN895AvAhnrLlCQtRzvhfinw3ILrY622c7kJ+PuzPREROyJiLiLmTpw40X6V\nkqRlqfUD1Yh4JzAKfORsz2fmvswczczRoaGhOoeWJC3QTrg/D1y24HpDq+0MEXEdsAvYlpn/V095\n0oXxcBCtdu1sPzALbI6ITVShfgPwjoUdIuIK4KPA1sw8XnuV0jJ4OIjUxsw9M18CbgYeBJ4EZjLz\nUETsjohtrW4fAV4D/FVEfCki9nesYmkJHg4iQWRmTwYeHR3Nubm5noytsq1ZA2f7zzoCXn65+/VI\ndYqIRzJzdKl+fkNVxfFwEMlwV4E8HEQy3FUgDweRPKxDhfJwEK12ztwlqUCGu7RCfmFK/chlGWkF\n/MKU+pUzd2kF/MKU+pXhLq3A0aPLa5e6xXCXVsAvTKlfGe7SCviFKfUrw11agV58Ycq7c9QO75aR\nVqibX5jy7hy1y5m7NEC8O0ftMtylAdKLu3NcBhpMhrs0QLp9d878MtCRI9Ue+fPLQAZ8/zPcpQHS\n7btzur0M5LuE+hju0gDp9t053VwG8l1CvTxmT9I5jYxUIbvY8DA8++zgjjXIPGZP0op1cxnIrRzq\nZbhLOqduLgO5lUO9DHdJ5zUxUS2LvPxy9dip9X23cqiX4S6pL3j2bb3cfkBS3/Ds2/o4c5ekAhnu\nklQgw12SCmS4S1KBDHdJKpDhLkkFaivcI2JrRDwVEYcj4tazPP+dEfGXrecfjoiRuguVJLVvyXCP\niLXAPcD1wBbgxojYsqjbTcA3M/MHgN8D7q67UEmq1dQUB3Y1z9hi+MCuJkxNFTFeOzP3K4HDmfl0\nZr4I3AdsX9RnO/DJ1s/3A9dGRNRXpiTV68DJMS6/a5xNR5pkwqYjTS6/a5wDJ8eKGK+dcL8UeG7B\n9bFW21n7ZOZLwEng9XUUKEmd8O7pBuPMMMM4d3A7M4wzzgzvnm4UMV5Xtx+IiB3ADoCNbvUmqYeO\nHoUjNNjLTm5nD7uZ5HM0iA5tMdzt8dqZuT8PXLbgekOr7ax9IuIi4BLgG4t/UWbuy8zRzBwdGhq6\nsIolqQYbN8I1NNnJXnYzyU72cg3Njm0x3O3x2pm5zwKbI2ITVYjfALxjUZ/9wLuAzwM/DxzMXh3x\nJElt+NhEteY9zgyfo0GTBjOM89jEDFD/Ukm3x1ty5t5aQ78ZeBB4EpjJzEMRsTsitrW6/Qnw+og4\nDHwAeMXtkpLUT667ZJbHbpvhmeEGEfDMcIPHbpvhuktmixjPM1QlaYB4hqokrWKGuyQVyHCXpAIZ\n7pJUIMNdkgrUs7tlIuIEcOQC/+frga/XWE6/Kfn1+doGV8mvb5Be23BmLvkt0J6F+0pExFw7twIN\nqpJfn69tcJX8+kp8bS7LSFKBDHdJKtCghvu+XhfQYSW/Pl/b4Cr59RX32gZyzV2SdH6DOnOXJJ3H\nwIX7Uod1D6qIuCwimhHxREQcioj397qmukXE2oh4NCI+3eta6hYRr4uI+yPinyPiyYj40V7XVJeI\n+PXWf5OPR8S9EfGqXte0EhHx8Yg4HhGPL2j73oj4bET8a+vxe3pZYx0GKtzbPKx7UL0EfDAztwBX\nAb9S0Gub936qbaNL9AfAP2TmDwGXU8jrjIhLgV8FRjPzzcBaqjMdBtkngK2L2m4FHsrMzcBDFLBt\n+UCFO+0d1j2QMvOFzPxi6+f/pgqHxWfVDqyI2AD8NPCxXtdSt4i4BPgJqnMNyMwXM/M/e1tVrS4C\nvqt1yto64Ks9rmdFMvMfgf9Y1Lwd+GTr508CP9vVojpg0MK9ncO6B15EjABXAA/3tpJa/T5wC/By\nrwvpgE3ACeBPW8tOH4uIV/e6qDpk5vPA7wBHgReAk5n5md5W1RFvyMwXWj9/DXhDL4upw6CFe/Ei\n4jXAXwO/lpn/1et66hARPwMcz8xHel1Lh1wEvAXYm5lXAP9DAW/rAVprz9up/oB9P/DqiHhnb6vq\nrNYRoQN/G+GghXs7h3UPrIj4Dqpgn87MT/W6nhpdDWyLiGepltJ+MiL+vLcl1eoYcCwz599p3U8V\n9iW4DngmM09k5reATwE/1uOaOuHfI+KNAK3H4z2uZ8UGLdy/fVh3RFxM9cHO/h7XVIuICKo12ycz\n83d7XU+dMvPDmbkhM0eo/j87mJnFzP4y82vAcxHxg62ma4EnelhSnY4CV0XEutZ/o9dSyIfFi+wH\n3tX6+V3A3/awllpc1OsCliMzX4qI+cO61wIfz8xDPS6rLlcDvwB8JSK+1Gq7LTMf6GFNat/7gOnW\npONp4Jd7XE8tMvPhiLgf+CLVHV2PMuDf5oyIe4FrgPURcQz4TeC3gZmIuIlqt9rx3lVYD7+hKkkF\nGrRlGUlSGwx3SSqQ4S5JBTLcJalAhrskFchwl6QCGe6SVCDDXZIK9P+jhvQjDcdh7gAAAABJRU5E\nrkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f9179fdbb90>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "print i+1\n",
-    "print nodes\n",
-    "print (i+1) % nodes\n",
+    "plt.plot(L, 'bo', C, 'rx')\n",
     "\n",
-    "adj[i, i+1 % nodes] = 1\n"
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "?plt.plot()"
    ]
   }
  ],
